; ModuleID = '/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object.c_ecma_builtin_object_frozen_or_sealed_helper.c'
source_filename = "/home/carl/AnghaBench/jerryscript/jerry-core/ecma/builtin-objects/extr_ecma-builtin-object.c_ecma_builtin_object_frozen_or_sealed_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, i32* }

@ECMA_OBJECT_ROUTINE_IS_FROZEN = common dso_local global i32 0, align 4
@ECMA_OBJECT_ROUTINE_IS_SEALED = common dso_local global i32 0, align 4
@ECMA_VALUE_FALSE = common dso_local global i32 0, align 4
@ECMA_VALUE_TRUE = common dso_local global i32 0, align 4
@ECMA_LIST_NO_OPTS = common dso_local global i32 0, align 4
@ECMA_PROPERTY_GET_NO_OPTIONS = common dso_local global i32 0, align 4
@ECMA_PROPERTY_TYPE_NAMEDACCESSOR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @ecma_builtin_object_frozen_or_sealed_helper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecma_builtin_object_frozen_or_sealed_helper(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @ECMA_OBJECT_ROUTINE_IS_FROZEN, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @ECMA_OBJECT_ROUTINE_IS_SEALED, align 4
  %18 = icmp eq i32 %16, %17
  br label %19

19:                                               ; preds = %15, %2
  %20 = phi i1 [ true, %2 ], [ %18, %15 ]
  %21 = zext i1 %20 to i32
  %22 = call i32 @JERRY_ASSERT(i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i64 @ecma_get_object_extensible(i32* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %19
  %27 = load i32, i32* @ECMA_VALUE_FALSE, align 4
  store i32 %27, i32* %3, align 4
  br label %80

28:                                               ; preds = %19
  %29 = load i32, i32* @ECMA_VALUE_TRUE, align 4
  store i32 %29, i32* %6, align 4
  %30 = load i32*, i32** %4, align 8
  %31 = load i32, i32* @ECMA_LIST_NO_OPTS, align 4
  %32 = call %struct.TYPE_4__* @ecma_op_object_get_property_names(i32* %30, i32 %31)
  store %struct.TYPE_4__* %32, %struct.TYPE_4__** %7, align 8
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 1
  %35 = load i32*, i32** %34, align 8
  store i32* %35, i32** %8, align 8
  store i64 0, i64* %9, align 8
  br label %36

36:                                               ; preds = %73, %28
  %37 = load i64, i64* %9, align 8
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp ult i64 %37, %40
  br i1 %41, label %42, label %76

42:                                               ; preds = %36
  %43 = load i32*, i32** %8, align 8
  %44 = load i64, i64* %9, align 8
  %45 = getelementptr inbounds i32, i32* %43, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = call i32* @ecma_get_string_from_value(i32 %46)
  store i32* %47, i32** %10, align 8
  %48 = load i32*, i32** %4, align 8
  %49 = load i32*, i32** %10, align 8
  %50 = load i32, i32* @ECMA_PROPERTY_GET_NO_OPTIONS, align 4
  %51 = call i32 @ecma_op_object_get_own_property(i32* %48, i32* %49, i32* null, i32 %50)
  store i32 %51, i32* %11, align 4
  %52 = load i32, i32* %5, align 4
  %53 = load i32, i32* @ECMA_OBJECT_ROUTINE_IS_FROZEN, align 4
  %54 = icmp eq i32 %52, %53
  br i1 %54, label %55, label %66

55:                                               ; preds = %42
  %56 = load i32, i32* %11, align 4
  %57 = call i64 @ECMA_PROPERTY_GET_TYPE(i32 %56)
  %58 = load i64, i64* @ECMA_PROPERTY_TYPE_NAMEDACCESSOR, align 8
  %59 = icmp ne i64 %57, %58
  br i1 %59, label %60, label %66

60:                                               ; preds = %55
  %61 = load i32, i32* %11, align 4
  %62 = call i64 @ecma_is_property_writable(i32 %61)
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %66

64:                                               ; preds = %60
  %65 = load i32, i32* @ECMA_VALUE_FALSE, align 4
  store i32 %65, i32* %6, align 4
  br label %76

66:                                               ; preds = %60, %55, %42
  %67 = load i32, i32* %11, align 4
  %68 = call i64 @ecma_is_property_configurable(i32 %67)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %72

70:                                               ; preds = %66
  %71 = load i32, i32* @ECMA_VALUE_FALSE, align 4
  store i32 %71, i32* %6, align 4
  br label %76

72:                                               ; preds = %66
  br label %73

73:                                               ; preds = %72
  %74 = load i64, i64* %9, align 8
  %75 = add i64 %74, 1
  store i64 %75, i64* %9, align 8
  br label %36

76:                                               ; preds = %70, %64, %36
  %77 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %78 = call i32 @ecma_collection_free(%struct.TYPE_4__* %77)
  %79 = load i32, i32* %6, align 4
  store i32 %79, i32* %3, align 4
  br label %80

80:                                               ; preds = %76, %26
  %81 = load i32, i32* %3, align 4
  ret i32 %81
}

declare dso_local i32 @JERRY_ASSERT(i32) #1

declare dso_local i64 @ecma_get_object_extensible(i32*) #1

declare dso_local %struct.TYPE_4__* @ecma_op_object_get_property_names(i32*, i32) #1

declare dso_local i32* @ecma_get_string_from_value(i32) #1

declare dso_local i32 @ecma_op_object_get_own_property(i32*, i32*, i32*, i32) #1

declare dso_local i64 @ECMA_PROPERTY_GET_TYPE(i32) #1

declare dso_local i64 @ecma_is_property_writable(i32) #1

declare dso_local i64 @ecma_is_property_configurable(i32) #1

declare dso_local i32 @ecma_collection_free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
